# maestro_activation

./: .gitignore  CMakeLists.txt  README.md  home_assistant_support.yaml  maestro_remote_support.py  remote_support.yaml  support_dashboard.yaml
client/: activation_client.cpp  activation_client.h
config/: server.conf
database/: schema.sql
device_client/: CMakeLists.txt  README.md  maestro_activation_client.cpp  maestro_activation_client.h  test_activation.cpp
scripts/: install.sh
server/include/: ActivationController.h  DatabaseManager.h  LicenseManager.h  SecurityUtils.h
server/src/: ActivationController.cpp  DatabaseManager.cpp  LicenseManager.cpp  SecurityUtils.cpp  main.cpp
